feat: Synchronize the deletion of stored emails recently deleted from the email server before synchronization - EXO-81764 - exoplatform/eXIP#26 (#43)